<resources>
    <!--Pantalla Principal-->
    <string name="app_name">Tutorium</string>
    <string name="Titulo">Tutorium</string>
    <string name="login">Ingresar</string>
    <string name="user">Email</string>
    <string name="passw">Contraseña</string>
    <string name="frasebienvenida">Encuentra un tutor cerca de tí.</string>
    <string name="register">Soy nuevo, registrarme</string>
    <string name="olvido">Olvidé mi contraseña</string>
    <!--Pantalla Registro-->
    <string name="fraseRegistro1">Aprende, conoce, enseña</string>
    <string name="fraseRegistro">Registrate, es gratuito</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="tipoRegistro">Registrarme como:</string>
    <string name="email">Direcciòn de Correo Electrónico:</string>
    <string name="edad">Edad:</string>
    <string name="estudiante">Estudiante</string>
    <string name="tutor">Tutor</string>
    <string name="sexo">Sexo:</string>
    <string name="masculino">Hombre</string>
    <string name="femenino">Mujer</string>
    <string name="registrarme">Registrarme</string>
    <string name="aceptacion0">Al hacer click en </string>
    <string name="aceptacion1">aceptas los términos y condiciones del servicio</string>
    <string-array name="niveles_array">
        <item>Básica</item>
        <item>Secundaria</item>
        <item>Tercer Nivel</item>
        <item>Cuarto Nivel</item>
    </string-array>

    <string-array name="edades_array">
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
    </string-array>
    <!--Pantalla registro cont. estudiante-->
    <string name="Nivel">Nivel Académico:</string>
    <string name="Carrera">Carrera:</string>
    <string name="Curso">Curso/Grado/Semestre:</string>
    <string name="Direcciòn">Dirección de Domicilio:</string>
    <string name="Teléfono">Teléfono:</string>
    <string name="Celular">Teléfono:</string>
    <!--Pantalla registro cont. tutor-->
    <string name="Profesion">Profesión u Oficio:</string>
    <string name="Foto">Foto:</string>
    <string name="Materias">Materias:</string>
    <!--Pantalla Perfil Tutor-->
    <string name="editar">Editar</string>
    <string name="cambiarpass">Cambiar Contraseña</string>
    <string name="calificacion">Calificaciòn</string>

    <!--Pantalla Perfil Estudiante-->
    <string name="buscarTutor">Encuentra un Tutor</string>

    <!--Pantalla Perfil Grupo-->
    <string name="nombreGrupo">Nombre del Grupo:</string>
    <string name="anadir">Añadir miembro al Grupo:</string>
    <string name="Miembros">Miembros</string>
    <!--Pantalla Busquedas-->
    <string name="Buscarpor">Buscar por:</string>
    <string name="Buscar">Buscar</string>
    <string name="porMateria">Por Materia:</string>
    <string name="porDirecciòn">Por Dirección.</string>
    <string name="porSexo">Por Sexo</string>
    <string name="filtrar">Filtrar Búsqueda</string>
    <string name="porHorario">Por Horario</string>

    <string-array name="dias_array">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
        <item>Domingo</item>
    </string-array>

    <string-array name="horas_array">
        <item>7 AM</item>
        <item>8 AM</item>
        <item>9 AM</item>
        <item>10 AM</item>
        <item>11 AM</item>
        <item>12 PM</item>
        <item>1 PM</item>
        <item>2 PM</item>
        <item>3 PM</item>
        <item>4 PM</item>
        <item>5 PM</item>
    </string-array>


    <!--Pantalla Contactos-->
    <string name="asunto">Asunto:</string>
    <string name="adjuntar">Adjuntar</string>
    <string name="Enviar">Contáctar</string>
    <string name="cc">Con copia a:</string>


    <!--Pantalla Clase_tutoria-->
    <string name="profe">Tutor:</string>
    <string name="alumnoogrupo">Alumno o Grupo:</string>
    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>
    <string name="duracion">Duración:</string>
    <string name="costo">Costo:</string>
    <string name="calificar">Calificar</string>
    <!--Pantalla Ayuda-->
    <string name="Acerca">Acerca de Tutorioum:</string>
    <string name="Desarrolladores">Desarrollado por Moterónica</string>
    <string name="Responsables">Santiago Cordero , ,</string>
    <string name="Condiciones">Tèrminos y Condiciones de Uso</string>

    <string name="condiciones">Tutorium no revela tus datos a terceros, los datos proporcionados se utilizan para brindarte un
                                mejor servicio utilizando técnicas de búsqueda inteligente</string>
    <string name="Versión">Versión</string>
    <string name="cuenca">Cuenca, Ecuador</string>

    <!--Simbolos-->
    <string name="vistobueno">√</string>
    <string name="equis">X</string>

    <!--Horario-->
    <string name="horario_disponible">HORARIO DISPONIBLE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
