<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/fondo1"
    tools:context="com.motetronica.apptutores.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frasebienvenida"
        android:textColor="@color/Negro"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

    <TextView
        android:text="@string/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="49dp"
        android:id="@+id/lbluser"
        android:textColor="@color/Negro"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:background="@color/Blanco"
        android:textColor="@color/Negro"
        android:id="@+id/txtuser"
        android:layout_below="@+id/lbluser"
        android:layout_marginTop="35dp" />

    <TextView
        android:text="@string/passw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblpass"
        android:layout_below="@+id/txtuser"
        android:layout_alignLeft="@+id/lbluser"
        android:textColor="@color/Negro"
        android:layout_marginTop="34dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColor="@color/Negro"
        android:id="@+id/txtpass"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/lblpass"
        android:layout_alignLeft="@+id/lbluser"
        android:background="@color/Blanco"
        />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/txtpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="ingresar" />

    <Button
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:id="@+id/button2"
        android:onClick="ir_registrar" />
</RelativeLayout>
