<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_busqueda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.motetronica.apptutores.Busqueda">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="69dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="118dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tableLayout"
                android:layout_alignLeft="@+id/tableLayout"
                android:layout_alignStart="@+id/tableLayout"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:id="@+id/textView7" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tableLayout"
                android:layout_alignLeft="@+id/tableLayout"
                android:layout_alignStart="@+id/tableLayout"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:id="@+id/textView8" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/porMateria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tableLayout"
                android:layout_alignLeft="@+id/tableLayout"
                android:layout_alignStart="@+id/tableLayout"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:id="@+id/textView9" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tableLayout"
                android:layout_alignLeft="@+id/tableLayout"
                android:layout_alignStart="@+id/tableLayout"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:id="@+id/textView10" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/porDirecciòn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tableLayout"
                android:layout_alignLeft="@+id/tableLayout"
                android:layout_alignStart="@+id/tableLayout"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:id="@+id/textView11" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tableLayout"
                android:layout_alignLeft="@+id/tableLayout"
                android:layout_alignStart="@+id/tableLayout"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:id="@+id/textView12" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tableLayout"
                android:layout_alignLeft="@+id/tableLayout"
                android:layout_alignStart="@+id/tableLayout"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:id="@+id/textView13" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tableLayout"
                android:layout_alignLeft="@+id/tableLayout"
                android:layout_alignStart="@+id/tableLayout"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:id="@+id/textView14" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <TextView
        android:text="@string/Buscarpor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="20dp"
        android:id="@+id/textView15" />

</RelativeLayout>
